<?xml version="1.0" encoding="UTF-8"?>

<resources>
    <string name="app_name">Text Recognition</string>

    <string name="firstName">First name</string>
    <string name="lastName">Last name</string>
    <string name="privateEmail">Private Email</string>
    <string name="workEmail">Work Email</string>
    <string name="mobileNumber">Mobile phone</string>
    <string name="privateNumber">Private phone</string>
    <string name="company">Company</string>
    <string name="address">Address</string>
    <string name="city">City</string>
    <string name="country">Country</string>
    <string name="mobilePhone">Mobile Phone</string>
    <string name="homePhone">Home Phone</string>
    <string name="homeEmail">Home Email</string>
    <string name="addButton">Add Contact</string>
    <string name="galleryMenuDiscard">Discard</string>
    <string name="galleryMenuShare">Share</string>
    <string name="galleryMenuLocation">Location</string>
    <string name="galleryMenuReprocess">Reprocess</string>
    <string name="MultiLocation">Show all locations on map</string>
    <string name="galleryMenuSendMyCard">Send my card</string>
    <string name="initialNotesMessage">Long click image to add notes!</string>
    <string name="notesPopupTitle">Notes</string>
    <string name="notesPopUpQuestion">Enter your notes:</string>
    <string name="autofocus">Autofocus</string>
    <string name="toggleLight">Light</string>
    <string name="myBusinessCard">My business card</string>
    <string name="resetHints">Reset usage hints</string>

    <string-array name="contactFields">
        <item>@string/firstName</item>
        <item>@string/lastName</item>
        <item>@string/mobileNumber</item>
        <item>@string/privateNumber</item>
        <item>@string/privateEmail</item>
        <item>@string/workEmail</item>
        <item>@string/company</item>
        <item>@string/address</item>
        <item>@string/city</item>
        <item>@string/country</item>
    </string-array>
</resources>
