<menu xmlns:android="http://schemas.android.com/apk/res/android">
    <!--item android:id="@+id/action_settings"
        android:title="Title"
        android:orderInCategory="100"
        android:showAsAction="never" /-->
    <item android:id="@+id/action_discard"
          android:icon="@drawable/ic_action_discard"
          android:title="@string/galleryMenuDiscard"
          android:showAsAction="always"/>
    <item android:id="@+id/action_share"
          android:icon="@drawable/ic_action_share"
          android:title="@string/galleryMenuShare"
          android:showAsAction="always"/>
    <item android:id="@+id/action_location"
          android:icon="@drawable/ic_action_place"
          android:title="@string/galleryMenuLocation"
          android:showAsAction="always"/>
    <item android:id="@+id/action_reprocess"
          android:icon="@drawable/ic_action_repeat"
          android:title="@string/galleryMenuReprocess"
          android:showAsAction="always"/>
    <item android:id="@+id/action_send_my_card"
          android:icon="@drawable/ic_action_email"
          android:title="@string/galleryMenuSendMyCard"
          android:showAsAction="always"/>
    <item android:id="@+id/action_all_location"
          android:title="@string/MultiLocation"
          android:orderInCategory="100"
          android:showAsAction="never" />
    <item android:id="@+id/action_configure_card"
          android:title="Configure your business card"
          android:orderInCategory="100"
          android:showAsAction="never" />
</menu>
